--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         // Tampilkan informasi perangkat
         const deviceInfoElement = document.getElementById('device-info');
-        deviceInfoElement.textContent = `Device Info: ${deviceInfo}`;
+        deviceInfoElement.textContent = `${deviceInfo}`;
 
         // Opsional: Cetak ke console log
         console.log(`Device Info: ${deviceInfo}`);
