--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         deviceInfoElement.textContent = `${deviceInfo}`;
 
         // Opsional: Cetak ke console log
-        console.log(`Device Info: ${deviceInfo}`);
+        console.log(`${deviceInfo}`);
     </script>
 </body>
 </html>
